# AdventOfCode

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: 2022.yml  2023.yml  go_tests.yml
2021/: build.gradle.kts  settings.gradle.kts
2022/: .gitignore  go.mod  go.sum  main.go  out
2022/cmd/day01/: day01.go  day01_test.go
2022/cmd/day02/: day02.go  day02_test.go
2022/cmd/day03/: day03.go  day03_test.go
2022/cmd/day04/: day04.go  day04_test.go
2022/cmd/day05/: day05.go  day05_test.go
2022/cmd/day06/: day06.go  day06_test.go
2022/cmd/day07/: day07.go  day07_test.go  sampleinput.txt
2022/cmd/day08/: day08.go  day08_test.go  export_test.go
2022/cmd/day09/: day09.go  day09_test.go  export_test.go
2022/cmd/day10/: day10.go  day10_test.go
2022/cmd/day11/: day11.go  day11_test.go
2022/cmd/day12/: day12.go  (+1 more)
Go/: go.mod  go.sum  main.go
Go/2022/: .gitignore  main.go
Go/2024/: .gitignore  go.mod  main.go
Kotlin/: .gitignore
Kotlin/2021/: local.properties
Kotlin/2025/: build.gradle.kts  settings.gradle.kts
Python/2018/: README.md  setup.py
Python/2024/: .gitignore
Ruby/2023/: .prettierrc.yml  gemfile  package-lock.json  package.json
Rust/2020/: Cargo.toml
Typescript/2023/: .prettierrc  README.md  generator.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
Typescript/2024/: .eslintrc  .gitignore  generator.js  package-lock.json  package.json  tsconfig.json
Typescript/aoc-util/: package-lock.json  package.json  tsconfig.json
visualization/aoc-vis/: package-lock.json  package.json  tsconfig.json
(+307 files in other folders)
