[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_handler = {path ="./src/lib/file_handler/"}
string_util = {path = "./src/lib/string_util/"}
regex = "1"

[[bin]]
name = "day01"
path = "src/bin/2020/day01/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/2020/day02/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/2020/day03/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/2020/day04/day04.rs"